fix header z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
      background-color: var(--color-black);
      position: sticky;
      top: 0;
-     z-index: 10000;
+     z-index: 1000;
      &__in {
           display: flex;
           align-items: center;
