--- a/src/components/UI/UISelect/UISelect.module.scss
+++ b/src/components/UI/UISelect/UISelect.module.scss
@@ -2,6 +2,7 @@
      position: relative;
      color: #fff;
      width: auto;
+     z-index: 1;
 }
 
 .header {
